==================
### 1.6.3
==================

TODO:
- Write player name cache to file?

*** INCOMPATIBLE CHANGES ***:
- NPC IDs are no longer supported, you must use the location syntax.
- A few more statuses have been renamed such as 'Cartboost' status renamed to
  'Cart Boost' for consistency with the skill name.
- \$remote_socket parameter removed from some Network/Send.pm functions:
  sendCartAdd sendCartGet

Bug fixes:
- 'i' command now displays equipped arrows under Equipment (Equipped).
- Quick-and-dirty @{$char->{inventory}} > 0 fix for useSelf_item
  dcOnEmpty. (Will fail if your bot doesn't carry anything at all.)
- Same quick-and-dirty fix for "Auto-storaging due to insufficient ___".
- Don't try to statsAddAuto before the stat point info has been received.
- Equipped arrows will now show how many of them are left.
- Shop title in shop.txt is detected better.
- Don't send name request for perfectly hidden players and NPCs.
- Fix autoTalkCont causing next step to happen too fast.
- Don't redirect command output if XKore_silent is enabled.
- Fix "party leave" crash when not in party.
- Only teleport-on-hit from monsters if they do not miss.
- Hopefully fix daggersins' weapons ending up on the wrong hand.
- "Player Connected" did not trigger 'player' plugin call.
- Guild auto deny timeout was not included in timeouts.txt.
  Deal auto deny timeout was not being used.
- Increase the maximum vending price to 99,990,000z.
- Fix job_equipment_hair_change packet detecting actor incorrectly.
- Pythagorean distances are no longer used; we now go by number of
  steps. This should make openkore more efficient in determining whether
  it is in range to attack.
- 'private 1' in servers.txt is also effective when changing map server.

New features:
- Console::Unix interface no longer has "Press ENTER to continue"
  prompt, since UNIX terminals generally don't close when openkore exits.
- Your level/job level is now displayed when you level up.